force-app/main/default/objects/Activity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>worship</fullName>
                <default>true</default>
                <label>Worship</label>
            </value>
            <value>
                <fullName>prayer</fullName>
                <label>Prayer</label>
            </value>
            <value>
                <fullName>meeting</fullName>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>outreach</fullName>
                <label>Outreach</label>
            </value>
            <value>
                <fullName>funeral</fullName>
                <label>Funeral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>