force-app/main/default/objects/Activity/fields/Travel_Bike_Mins__c.field-meta.xml
<CustomField>
    <fullName>Travel_Bike_Mins__c</fullName>
    <label>Travel Bike (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>