force-app/main/default/objects/Activity/fields/Travel_Walk_Mins__c.field-meta.xml
<CustomField>
    <fullName>Travel_Walk_Mins__c</fullName>
    <label>Travel Walk (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>